Changelog
=========

1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2012-05-25)
------------------

- Add a strict_domains setting which 403's unpermitted domain access.

- Make redirects permanent


0.6.19 (2012-05-25)
-------------------

- Plone recipe can now construct VHM rewrites that use %{HTTP_HOST} - allowing
  a single vhost to serve multiple domains via ServerAlias.


0.6.18 (2012-03-02)
-------------------

- Fix case where ``${:ssl}`` is auto.

- Find all doctests automatically


0.6.17 (2012-03-02)
-------------------

- Fix handling of ``${:auto-www}`` and updated regression tests accordingly.


0.6.16 (2012-02-27)
-------------------

- Add sendfile option to the wsgi recipe to enable mod_xsendfile


0.6.15 (2012-02-23)
-------------------

- bugfix to regain python2.4 compatibility


0.6.14 (2012-02-20)
-------------------

- Allow recipe to set Header::

      header.X-Hello = SOME EXAMPLE HEADER

- Moved some general functionality into the ApacheBase class for reuse elsewhere

- Added isotoma.recipe.apache:maintenance to provide an apache configuration
  for a site which will return 503s for each request, and display a predefined
  maintenance page.


0.6.13 (2011-12-19)
-------------------

- Allow recipe to set RequestHeaders::

      requestheader.plone_skin = Sunburst


0.6.12 (2011-11-29)
-------------------

- Fixed an issue with PURGE not being received if basic authentication is
  enabled.
- Added an "indexes" option to the wsgi recipe to limit access to directory
  indexes unless "indexes = on".


0.6.11 (2011-11-28)
-------------------

- Lots of template whitespace removal to produce more legible apache configs.
- Fixed bug where RewriteRule directives were being concatenated on a single
  line.


0.6.10 (2011-11-26)
-------------------

- Redirects (such as those used by the auto-www option) now pay attention to
  the "ssl" option, redirecting to https:// or http:// as required.