@@ -37,6 +37,7 @@ The template was indeed created::
       ServerAdmin nobody@localhost
       CustomLog /var/log/apache2/www.localhost-access.log combined
       ErrorLog /var/log/apache2/www.localhost-error.log
+      UseCanonicalName Off
       ProxyRequests Off
       RewriteEngine On
       RewriteRule /(.*)$ http://localhost/$1 [R=permanent]
@@ -49,6 +50,7 @@ The template was indeed created::
       CustomLog /var/log/apache2/localhost-access.log combined
   <BLANKLINE>
       ErrorLog /var/log/apache2/localhost-error.log
+      UseCanonicalName Off
   <BLANKLINE>
       ProxyPreserveHost On
       <Proxy *>
