@@ -48,6 +48,7 @@ The template was indeed created::
       CustomLog /var/log/apache2/another-example.com;https://www.example.com/another-access.log combined
   <BLANKLINE>
       ErrorLog /var/log/apache2/another-example.com;https://www.example.com/another-error.log
+      UseCanonicalName Off
   <BLANKLINE>
       ProxyRequests Off 
       RewriteEngine On
@@ -64,6 +65,7 @@ The template was indeed created::
       CustomLog /var/log/apache2/www.another-example.com;https://www.example.com/another-access.log combined
   <BLANKLINE>
       ErrorLog /var/log/apache2/www.another-example.com;https://www.example.com/another-error.log
+      UseCanonicalName Off
   <BLANKLINE>
       ProxyRequests Off 
       RewriteEngine On
@@ -80,6 +82,7 @@ The template was indeed created::
       CustomLog /var/log/apache2/www.example.com-access.log combined
   <BLANKLINE>
       ErrorLog /var/log/apache2/www.example.com-error.log
+      UseCanonicalName Off
   <BLANKLINE>
   <BLANKLINE>
   <BLANKLINE>
