@@ -49,6 +49,7 @@ Let's check that the template was created::
       ServerAdmin test@example.com
       CustomLog /var/log/apache2/example.com-access.log combined
       ErrorLog /var/log/apache2/example.com-error.log
+      UseCanonicalName Off
   <BLANKLINE>
       <Location /admin>
           Order Allow,Deny
