@@ -50,14 +50,16 @@ The template was indeed created::
       ServerAdmin nobody@localhost
       CustomLog /var/log/apache2/localhost-access.log combined
       ErrorLog /var/log/apache2/localhost-error.log
+      UseCanonicalName Off
       RewriteEngine On
-      RewriteRule /(.*)$ https://localhost/$1 [R=permanent]
+      RewriteRule /(.*)$ https://%{SERVER_NAME}/$1 [R=permanent]
   </VirtualHost>
   <VirtualHost 192.168.0.99:443>
       ServerName localhost
       ServerAdmin nobody@localhost
       CustomLog /var/log/apache2/ssl-localhost-access.log combined
       ErrorLog /var/log/apache2/ssl-localhost-error.log
+      UseCanonicalName Off
       SSLEngine on
       SSLCipherSuite ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
       SSLCertificateFile /etc/ssl/certs/example.com.crt
