@@ -19,11 +19,13 @@ NameVirtualHost {{ interface }}:{{ https_port }}
 
     {{ macros.log(sitename) }}
 
+    UseCanonicalName Off
+
     {% block redirect_body %}
     ProxyRequests Off
     {%- endblock redirect_body %}
     RewriteEngine On
-    {{ macros.get_redirect(ssl, sitename) }}
+    {{ macros.get_redirect(ssl, "%{SERVER_NAME}") }}
 </VirtualHost>
 {%- endif %}
 
@@ -33,6 +35,8 @@ NameVirtualHost {{ interface }}:{{ https_port }}
     ServerAdmin {{ serveradmin }}
 
     {{ macros.log(r) }}
+
+    UseCanonicalName Off
 
     ProxyRequests Off
     RewriteEngine On
@@ -49,6 +53,8 @@ NameVirtualHost {{ interface }}:{{ https_port }}
     ServerAdmin {{ serveradmin }}
 
     {{ macros.log(("ssl-" if ssl else "")  ~ sitename) }}
+
+    UseCanonicalName Off
 
     {% if ssl -%}
     SSLEngine on
@@ -115,9 +121,9 @@ NameVirtualHost {{ interface }}:{{ https_port }}
 
     {% if strict_domains %}
     RewriteEngine On
-    RewriteCond %{HTTP_HOST} !^{{ sitename|replace(".", "\\.") }}$ [NC]
+    RewriteCond %{SERVER_NAME} !^{{ sitename|replace(".", "\\.") }}$ [NC]
     {% for alias in aliases %}
-    RewriteCond %{HTTP_HOST} !^{{ alias|replace(".", "\\.") }}$ [NC]
+    RewriteCond %{SERVER_NAME} !^{{ alias|replace(".", "\\.") }}$ [NC]
     {% endfor %}
     RewriteRule .? - [F,L]
     RewriteEngine Off
